--- a/index.html
+++ b/index.html
@@ -405,11 +405,7 @@
               <img src="/images/svg/005-interview.svg" alt />
               <h3>Поддержка</h3>
               <p>
-                Сообщество пользователей CinemaPress на форуме
-                <a href="/ref/#https://enota.club" target="_blank"
-                  >enota.club</a
-                >
-                и телеграм чате (скоро)
+                Сообщество пользователей CinemaPress на форумах, телеграм чатах и GitHub issues
               </p>
             </div>
           </div>
@@ -1098,11 +1094,7 @@
             <div class="section-title mb-20">
               <h2>Поддержка пользователей CinemaPress</h2>
               <p>
-                Основное сообщество пользователей находится на
-                <a href="/ref/#https://enota.club" target="_blank"
-                  >ENOTA.CLUB</a
-                >
-                и телеграм чате (скоро). Подписывайтесь на канал CinemaPress на
+                Основное сообщество пользователей находится на форумах, телеграм чатах и GitHub issues. Подписывайтесь на канал CinemaPress на
                 YouTube, там Вы найдете множество полезных видео по созданию
                 киносайта на HTTPS-протоколе, работе на поддоменах, мобильная и
                 ТВ версии онлайн кинотеатра, генерация собственного приложения и
@@ -1116,10 +1108,10 @@
               >YouTube</a
             >
             <a
-              href="/ref/#https://enota.club"
+              href="https://github.com/CinemaPress/CinemaPress/issues"
               class="bttn-mid btn-emt"
               target="_blank"
-              >ENOTA.CLUB</a
+              >GitHub issues</a
             >
             <a href="/ru/admin" class="bttn-mid btn-emt" target="_blank"
               >Документация</a
@@ -1193,8 +1185,8 @@
               <h3>Сообщество</h3>
               <ul>
                 <li>
-                  <a href="/ref/#https://enota.club" target="_blank"
-                    >Форум сообщества</a
+                  <a href="https://github.com/CinemaPress/CinemaPress/issues" target="_blank"
+                    >Вопросы на GitHub</a
                   >
                 </li>
                 <li>
