--- a/en/index.html
+++ b/en/index.html
@@ -403,11 +403,7 @@
               <img src="/images/svg/005-interview.svg" alt />
               <h3>Community</h3>
               <p>
-                CinemaPress user community on forum
-                <a href="/ref/#https://enota.club" target="_blank"
-                  >enota.club</a
-                >
-                and telegram chat (coming soon)
+                CinemaPress user community on forums, telegram chats and GitHub issues
               </p>
             </div>
           </div>
@@ -1093,11 +1089,7 @@
             <div class="section-title mb-20">
               <h2>CinemaPress User Support</h2>
               <p>
-                The main user community is on
-                <a href="/ref/#https://enota.club" target="_blank"
-                  >ENOTA.CLUB</a
-                >
-                and telegram chat (coming soon). Subscribe to the CinemaPress
+                The main user community is on forums, telegram chats and GitHub issues. Subscribe to the CinemaPress
                 channel on YouTube, where you will find many useful videos on
                 creating a movie site using the HTTPS protocol, working on
                 subdomains, mobile and TV versions of an online movie theater,
@@ -1111,10 +1103,10 @@
               >YouTube</a
             >
             <a
-              href="/ref/#https://enota.club"
+              href="https://github.com/CinemaPress/CinemaPress/issues"
               class="bttn-mid btn-emt"
               target="_blank"
-              >ENOTA.CLUB</a
+              >GitHub issues</a
             >
             <a href="/ru/admin" class="bttn-mid btn-emt" target="_blank"
               >Documentation</a
@@ -1186,8 +1178,8 @@
               <h3>Community</h3>
               <ul>
                 <li>
-                  <a href="/ref/#https://enota.club" target="_blank"
-                    >Community forum</a
+                  <a href="https://github.com/CinemaPress/CinemaPress/issues" target="_blank"
+                    >GitHub issues</a
                   >
                 </li>
                 <li>
